### link to all class demo

--- a/index.html
+++ b/index.html
@@ -18,18 +18,40 @@
                 <li onclick="change(1)" class="demo" id="demo">
                     <a href="##" id="demo-link">Demo_課堂實作</a>
                     <section class="demo-section" id="demo-section">
-                        <li onclick="linkto('a')">
+                        <li onclick="linkto(1)">
                             <a href="#">week1</a>
                         </li>
-                        <li>
-                            <a href="">week2</a>
+                        <li onclick="linkto(2)">
+                            <a href="#">week2</a>
                         </li>
-                        <li>
-                            <a href="">week3</a>
+                        <li onclick="linkto(3)">
+                            <a href="#">week3</a>
                         </li>
-                        <li>
-                            <a href="">week4</a>
+                        <li onclick="linkto(4)">
+                            <a href="#">week4</a>
                         </li>
+                        <li onclick="linkto(5)">
+                            <a href="#">week5</a>
+                        </li>
+                        <li onclick="linkto(6)">
+                            <a href="#">week6</a>
+                        </li>
+                        <li onclick="linkto(8)">
+                            <a href="#">week8</a>
+                        </li>
+                        <li onclick="linkto(9)">
+                            <a href="#">week9</a>
+                        </li>
+                        <li onclick="linkto(11)">
+                            <a href="#">week11</a>
+                        </li>
+                        <li onclick="linkto(12)">
+                            <a href="#">week12</a>
+                        </li>
+                        <li onclick="linkto(13)">
+                            <a href="#">week13</a>
+                        </li>
+
                     </section>
                     
                 </li>
