--- a/index.html
+++ b/index.html
@@ -19,44 +19,44 @@
                     <a href="##" id="demo-link">Demo_課堂實作</a>
                     <section class="demo-section" id="demo-section">
                         <li onclick="linkto(1)">
-                            <a href="#">week1</a>
+                            <a href="#">week1_基本網頁語法</a>
                         </li>
                         <li onclick="linkto(2)">
-                            <a href="#">week2</a>
+                            <a href="#">week2_Card</a>
                         </li>
                         <li onclick="linkto(3)">
-                            <a href="#">week3</a>
+                            <a href="#">week3_Blog</a>
                         </li>
                         <li onclick="linkto(4)">
-                            <a href="#">week4</a>
+                            <a href="#">week4_Blog</a>
                         </li>
                         <li onclick="linkto(5)">
-                            <a href="#">week5</a>
+                            <a href="#">week5_Grid</a>
                         </li>
                         <li onclick="linkto(6)">
-                            <a href="#">week6</a>
+                            <a href="#">week6_Breakpoints</a>
                         </li>
                         <li onclick="linkto(8)">
-                            <a href="#">week8</a>
+                            <a href="#">week8_Navbar</a>
                         </li>
                         <li onclick="linkto(9)">
-                            <a href="#">week9</a>
+                            <a href="#">week9_MultiPage</a>
                         </li>
                         <li onclick="linkto(11)">
-                            <a href="#">week11</a>
+                            <a href="#">week11_Midterm</a>
                         </li>
                         <li onclick="linkto(12)">
-                            <a href="#">week12</a>
+                            <a href="#">week12_Resume</a>
                         </li>
                         <li onclick="linkto(13)">
-                            <a href="#">week13</a>
+                            <a href="#">week13_Resume</a>
                         </li>
 
                     </section>
                     
                 </li>
-                <li>
-                    <a href="#">Works_作品集</a>
+                <li onclick="change(2)">
+                    <a href="#">Portfolio_作品集</a>
                 </li>
                 <li>
                     <a href="">Resume_履歷表</a>
