### make logo to Portfolio & show Portfolio_img by tiles

--- a/portfolio_66/portfolio_66.html
+++ b/portfolio_66/portfolio_66.html
@@ -10,7 +10,7 @@
         <article class="portfolio-tiles-logo"></article>
             <img src="./img/portfolio-log2.png" alt="" class="portfolio-tiles-photo">
         <article class="portfolio-tiles-img">
-            <button class="tiles1"><h3>C語言-河內塔</h3></button>
+            <button class="tiles1" onclick="chage(1)"></button>
             <button class="tiles2"></button>
             <button class="tiles3"></button>
             <button class="tiles4"></button>
@@ -19,7 +19,11 @@
             <button class="tiles7"></button>
             <button class="tiles8"></button>
         </article>
+        <article class="portfolio-tiles-header">
+            <h3 id="header"></h3>
+        </article>
     </section>
+    <script src="./js/portfolio.js"></script>
 </head>
 <body>
     
