### Design a drop list for link demo and works (use transition and hover)

--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
                     <a href="">首頁</a>
                     <div class="underline"></div>
                 </li>
-                <li>
+                <li class="drop-list">
                     <a href="">課堂實作</a>
                     <i class="fa-sharp fa-solid fa-angle-down icon"></i>
                     <div class="underline"></div>
+                    <div class="nav-form">
+                        <a href="">Card</a>
+                        <a href="">Blog</a>
+                        <a href="">Mutipage</a>
+                        <a href="">Resume</a>
+                    </div>
                 </li>
-                <li>
+                <li class="drop-list">
                     <a href="">作品集</a>
                     <i class="fa-sharp fa-solid fa-angle-down icon"></i>
                     <div class="underline"></div>
@@ -50,5 +56,6 @@
             </ul>
         </div>
     </nav>
+    <script src="./js/66.js"></script>
 </body>
 </html>
