### breakpoint for nav

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     <div class="underline"></div>
                 </li>
             </ul>
+            <button class="nav-btn" id="nav-btn">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
     </nav>
     <script src="./js/66.js"></script>
