--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                     <a href="">作品集</a>
                     <i class="fa-sharp fa-solid fa-angle-down icon"></i>
                     <div class="underline"></div>
+                    <div class="nav-form">
+                        <a href="">計算機程式語言</a>
+                        <a href="">計算機概論</a>
+                        <a href="">開源軟體實務</a>
+                    </div>
                 </li>
                 <li>
                     <a href="">履歷表</a>
@@ -57,8 +62,40 @@
             <button class="nav-btn" id="nav-btn">
                 <i class="fas fa-bars"></i>
             </button>
+            <button class="close-btn" id="close-btn">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
     </nav>
+    <!-- end of navbar -->
+
+
+    <!-- sidebar -->
+    <aside class="sidebar" id="sidebar">
+        <div>
+            <ul class="sidebar-links">
+                <li>
+                    <a href="">首頁</a>
+                </li>
+                <li>
+                    <a href="">課堂實作</a>
+                    <i class="fa-solid fa-plus"></i>
+                </li>
+                <li>
+                    <a href="">作品集  </a>
+                    <i class="fa-solid fa-plus"></i>
+                </li>
+                <li>
+                    <a href="">履歷表</a>
+                </li>
+                <li>
+                    <a href="">期末專題</a>
+                </li>
+            </ul>
+        </div>
+        
+    </aside>
+    <!-- end of sidebar -->
     <script src="./js/66.js"></script>
 </body>
 </html>
