--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
         
     </aside>
     <!-- end of sidebar -->
+
+
+    <!-- contact -->
+    <section class="contact">
+        <a href="https://line.me/ti/p/fv1heHFz2u" target="_blank"><i class="fa-brands fa-line"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100007905312982&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://instagram.com/twns570010?igshid=YmMyMTA2M2Y=" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+        <a href="211410666@o365.tku.edu.tw" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+        
+    </section>
+    <!-- contact end -->
     <script src="./js/66.js"></script>
 </body>
 </html>
