### design contect in portfolio and use iframe without border link to another one

--- a/index.html
+++ b/index.html
@@ -139,13 +139,12 @@
         
         <div class="portfolio_c-container">
             <div class="protfolio_c-option">
-                <article class="c_button">
+                <article class="c_button" onclick="change(1)">
                     <h4>基本框架與輸出</h4>
                     <p>基礎的C語言框架,與基本輸出函式介紹與應用</p>
                 </article>
             </div>
-            <div class="protfolio_c-center" id="c_center">
-                
+            <div class="portfolio_c-center" id="c_center">
             </div>
         </div>
     </section>
