--- a/index.html
+++ b/index.html
@@ -141,11 +141,18 @@
             <div class="protfolio_c-option">
                 <article class="c_button" onclick="change(1)">
                     <h4>基本框架與輸出</h4>
-                    <p>基礎的C語言框架,與基本輸出函式介紹與應用</p>
+                </article>
+                <article class="c_button" onclick="change(2)">
+                    <h4>輸入與運算子</h4>
+                </article>
+                <article class="c_button" onclick="change(3)">
+                    <h4>條件判斷式</h4>
                 </article>
             </div>
             <div class="portfolio_c-center" id="c_center">
             </div>
+            
+            
         </div>
     </section>
     <!-- end portfolio -->
