### Complete C language content and typesetting

--- a/portfolio/c.html
+++ b/portfolio/c.html
@@ -134,6 +134,15 @@
                 <article class="c_button" onclick="change(7)">
                     <h4>Bubble Sort</h4>
                 </article>
+                <article class="c_button" onclick="change(8)">
+                    <h4>遞迴函式</h4>
+                </article>
+                <article class="c_button" onclick="change(9)">
+                    <h4>河內塔</h4>
+                </article>
+                <article class="c_button" onclick="change(10)">
+                    <h4>結構</h4>
+                </article>
             </div>
             <div class="portfolio_c-center" id="c_center"></div>
         </div>
