--- a/portfolio/c.html
+++ b/portfolio/c.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="../css/Project_66.css">
     <title>Document</title>
 </head>
@@ -112,9 +119,9 @@
         
         
         <div class="portfolio_c-container">
-            <div class="protfolio_c-option">
+            <div class="portfolio_c-option">
                 <article class="c_button" onclick="change(1)">
-                    <h4>基本框架與輸出</h4>
+                    <h4>框架與輸出</h4>
                 </article>
                 <article class="c_button" onclick="change(2)">
                     <h4>輸入與運算子</h4>
