--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </li>
                 <li>
                     <div class="sidebar-link">
-                        <a href="">課堂實作</a>
+                        <a href="./portfolio/c.html">課堂實作</a>
                         <i class="fa-solid fa-plus"></i>
                     </div>
                     <div class="underline"></div>
