--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="underline"></div>
                 </li>
                 <li>
-                    <a href="">期末專題</a>
+                    <a href="./final/Learn_66.html">期末專題</a>
                     <div class="underline"></div>
                 </li>
             </ul>
