--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="underline"></div>
                 </li>
                 <li>
-                    <div class="sidebar-link"><a href="">期末專題</a></div>
+                    <div class="sidebar-link"><a href="./final/Learn_66.html">期末專題</a></div>
                     
                     <div class="underline"></div>
                 </li>
