--- a/portfolio/c.html
+++ b/portfolio/c.html
@@ -34,18 +34,18 @@
                         <i class="fa-sharp fa-solid fa-angle-down icon"></i>
                         <div class="underline"></div>
                         <div class="nav-form">
-                            <a href="">Card</a>
-                            <a href="">Blog</a>
-                            <a href="">Mutipage</a>
-                            <a href="">Resume</a>
+                            <a href="#" onclick="demo_c(1)">Card</a>
+                            <a href="#" onclick="demo_c(2)">Blog</a>
+                            <a href="#" onclick="demo_c(3)">Mutipage</a>
+                            <a href="#" onclick="demo_c(4)">Resume</a>
                         </div>
                     </li>
                     <li class="drop-list">
-                        <a href="">作品集</a>
+                        <a href="#">作品集</a>
                         <i class="fa-sharp fa-solid fa-angle-down icon"></i>
                         <div class="underline"></div>
                         <div class="nav-form">
-                            <a href="#portfolio_c" class="current">計算機程式語言</a>
+                            <a href="./c.html" class="current">計算機程式語言</a>
                             <a href="">計算機概論</a>
                             <a href="">開源軟體實務</a>
                         </div>
