--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- nav links -->
             <ul class="nav-links">
                 <li>
-                    <a href="#index">首頁</a>
+                    <a href="./index.html">首頁</a>
                     <div class="underline"></div>
                 </li>
                 <li class="drop-list">
@@ -34,10 +34,10 @@
                     <i class="fa-sharp fa-solid fa-angle-down icon"></i>
                     <div class="underline"></div>
                     <div class="nav-form">
-                        <a href="">Card</a>
-                        <a href="">Blog</a>
-                        <a href="">Mutipage</a>
-                        <a href="">Resume</a>
+                        <a href="#" onclick="demo(1)">Card</a>
+                        <a href="#" onclick="demo(2)">Blog</a>
+                        <a href="#" onclick="demo(3)">Mutipage</a>
+                        <a href="#" onclick="demo(4)">Resume</a>
                     </div>
                 </li>
                 <li class="drop-list">
@@ -124,7 +124,8 @@
                 Hope to share with you the learning process of the whole semester</h3>
         </div>
         
-        <div class="index-right"></div>
+        <div class="index-right">
+        </div>
     </section>
     <!-- end index -->
 
