### Design Resume with Skill and Information

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -109,7 +109,89 @@
     </aside>
     <!-- end of sidebar -->
 
-    <section class="content-section" id="index"></section>
+    <section class="resume content-section" id="index">
+        <div class="resume-title">
+            <h2 style="letter-spacing: 1rem; font-size: 5rem;">RESUME</h2>
+            <div class="underline"></div>
+        </div>
+        <div class="resume-container">
+            <div class="resume-container-left">
+                <div class="resume-container-left-contect">
+                    <h3 style="color: rgb(145, 48, 29);">NAME :&nbsp;</h3>
+                    <h3>David-Liu</h3>
+                </div>
+                <div class="resume-container-left-contect">
+                    <h3 style="color: rgb(145, 48, 29);">ADDRESS :&nbsp;</h3>
+                    <h3>Taiwan, Taipei City</h3>
+                </div>
+                <div class="resume-container-left-contect">
+                    <h3 style="color: rgb(145, 48, 29);">EMAIL :&nbsp;</h3>
+                    <h3>211410666@o365.tku.edu.tw</h3>
+                </div>
+                <div class="resume-container-left-contect">
+                    <h3 style="color: rgb(145, 48, 29);">EDUCATION :&nbsp;</h3>
+                    <h3>Tamkang University CSIE</h3>
+                </div>
+                <div class="resume-container-left-contect">
+                    <h3 style="color: rgb(145, 48, 29);">LANGUAGE ABILITIES :&nbsp;</h3>
+                    <h3>Mandarin(native speaker)&nbsp;&nbsp;&nbsp;English(conversant)</h3>
+                </div>
+                <div class="resume-container-left-contect">
+                    <h3 style="color: rgb(145, 48, 29);">MANAGEMENT EXPERIENCE :&nbsp;</h3>
+                    <h3>Seven years</h3>
+                </div>
+                <br>
+                <br>
+                <div class="resume-container-left-question">
+                    <h3 style="color: rgb(145, 48, 29);">What position do I want?&nbsp;</h3>
+                    <h3>Data Engineer/Front-end Engineer/Backend Engineer</h3>
+                </div>
+                <div class="resume-container-left-question">
+                    <h3 style="color: rgb(145, 48, 29);">Why am I qualified?&nbsp;</h3>
+                    <h3>During college, I not only mastered the teaching content of the front-end and back-end courses, but also spent a lot of time learning the skills that front-end and back-end engineers must have, so I think I am very competent as a front-end or back-end engineer, or even a front end.</h3>
+                    <br>
+                    <h3>In addition, I also do a lot of research on data analysis, because this is a part of my interest. I believe that a lot of big data statistics are helpful to the company's operations. I think I can also demonstrate this part of my skills in the company. ability value.</h3>
+                </div>
+            </div>
+            <div class="resume-container-right">
+                <h3 style="font-size: 2rem; color: rgb(145, 48, 29); margin-bottom: 3rem;">SKILLS</h2>
+                    <div class="skill-cotainer">
+                        <article class="skill-block">
+                            <h3>HTML</h3>
+                            <i class="fa-brands fa-html5"></i>
+                        </article>
+                        <article class="skill-block">
+                            <h3>CSS</h3>
+                            <i class="fa-brands fa-html5"></i>
+                        </article>
+                        <article class="skill-block">
+                            <h3>JS</h3>
+                            <i class="fa-brands fa-html5"></i>
+                        </article>
+                        <article class="skill-block">
+                            <h3>JQuery</h3>
+                            <i class="fa-brands fa-html5"></i>
+                        </article>
+                        <article class="skill-block">
+                            <h3>SQL</h3>
+                            <i class="fa-brands fa-html5"></i>
+                        </article>
+                        <article class="skill-block">
+                            <h3>C</h3>
+                            <i class="fa-brands fa-html5"></i>
+                        </article>
+                        <article class="skill-block">
+                            <h3>Python</h3>
+                            <i class="fa-brands fa-html5"></i>
+                        </article>
+                        <article class="skill-block">
+                            <h3>Linux</h3>
+                            <i class="fa-brands fa-html5"></i>
+                        </article>
+                    </div>
+            </div>
+        </div>
+    </section>
 
 
 
