--- a/resume/resume.html
+++ b/resume/resume.html
@@ -111,7 +111,7 @@
 
     <section class="resume content-section" id="index">
         <div class="resume-title">
-            <h2 style="letter-spacing: 1rem; font-size: 5rem;">RESUME</h2>
+            <h2>RESUME</h2>
             <div class="underline"></div>
         </div>
         <div class="resume-container">
@@ -140,6 +140,18 @@
                     <h3 style="color: rgb(145, 48, 29);">MANAGEMENT EXPERIENCE :&nbsp;</h3>
                     <h3>Seven years</h3>
                 </div>
+                <div>
+                    <h3 style="color: rgb(145, 48, 29);">PROFESSIONAL EXPERIENCE :&nbsp;</h3>
+                    <h3>2008-2008 Su 蔬食料理 Parttime</h3>
+                    <h3>2010-2011 C language programming teaching assistant </h3>
+                    <h3>2013-2014 Restaurant jobs in america </h3>
+                    <h3>2014-2015 Cash Cart Security</h3>
+                    <h3>2015-2016 Advertisers</h3>
+                    <h3>2016-2017 Business machine maintenance personnel</h3>
+                    <h3>2017-2019 Assistant of Sample preparation in BV</h3>
+                    <h3>2019-2021 Customer service team leader</h3>
+                    <h3>2021-now  Group Leader In Bureau Veritas</h3>
+                </div>
                 <br>
                 <br>
                 <div class="resume-container-left-question">
@@ -154,7 +166,7 @@
                 </div>
             </div>
             <div class="resume-container-right">
-                <h3 style="font-size: 2rem; color: rgb(145, 48, 29); margin-bottom: 3rem;">SKILLS</h2>
+                <h3 style="font-size: 2rem; color: rgb(145, 48, 29); margin-bottom: 2rem;">SKILLS</h3>
                     <div class="skill-cotainer">
                         <article class="skill-block">
                             <h3>HTML</h3>
@@ -162,31 +174,121 @@
                         </article>
                         <article class="skill-block">
                             <h3>CSS</h3>
-                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-brands fa-css3-alt"></i>
                         </article>
                         <article class="skill-block">
                             <h3>JS</h3>
-                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-brands fa-js"></i>
                         </article>
                         <article class="skill-block">
                             <h3>JQuery</h3>
-                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-solid fa-clipboard-question"></i>
                         </article>
                         <article class="skill-block">
                             <h3>SQL</h3>
-                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-solid fa-database"></i>
                         </article>
                         <article class="skill-block">
                             <h3>C</h3>
-                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-solid fa-code"></i>
                         </article>
                         <article class="skill-block">
                             <h3>Python</h3>
-                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-brands fa-python"></i>
                         </article>
                         <article class="skill-block">
                             <h3>Linux</h3>
-                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-brands fa-linux"></i>
+                        </article>
+                    </div>
+                    <h3 style="font-size: 2rem; color: rgb(145, 48, 29); margin-bottom: 2rem; margin-top: 5rem; margin-left: 3rem;">MY TIME-LINE</h3>
+                    <div class="timeline-cotainer">
+                        <article class="timeline">
+                            <div class="timeline-content"><h2>Studied at Dunxu High School</h2>
+                                <p>Enrolled in Dunxu Industrial and Commercial Comprehensive High School in 2005, met many friends here, and spent three years of happy high school time. During the schooling period, he kept his academic performance at the top of the school and graduated in 2008.</p></div>
+                            <div class="timeline-img">
+                                <img src="./img/1.png" alt="">
+                                <h2>2005-2008</h2>
+                            </div>
+                        </article>
+                        <article class="timeline">
+                            <div class="timeline-img">
+                                <img src="./img/2.png" alt="">
+                                <h2>2008-2009</h2>
+                            </div>
+                            <div class="timeline-content"><h2>Studied at Soochow University</h2>
+                                <p>In 2009, I was admitted to the Department of Physics of Soochow University and studied.</p>
+                                <p>But in my freshman year, considering the learning environment and course content, it was not what I wanted to learn. So I chose to suspend school and retake the exam in the same year.</p>
+                            </div>
+                        </article>
+                        <article class="timeline">
+                            <div class="timeline-content"><h2>Studied at Tzu Chi University</h2>
+                                <p>After the re-examination, I was admitted to the Department of Medical Informatics of Tzu Chi University that year. During these three years, I was really happy. I think I have gained a lot from what I should play and learn in college.</p>
+                                <p>However, due to personal factors, I chose not to continue my studies in my junior year, and chose to serve in the army, and use this year to think about the future direction of life</p>
+                            </div>
+                            <div class="timeline-img">
+                                <img src="./img/3.png" alt="">
+                                <h2>2009-2012</h2>
+                            </div>
+                        </article>
+                        <article class="timeline">
+                            <div class="timeline-img">
+                                <img src="./img/4.png" alt="">
+                                <h2>2012-2013</h2>
+                            </div>
+                            <div class="timeline-content"><h2>Compulsory Labor</h2>
+                                <p>During my one year in the army, I was lucky that my unit was close to my home, and my duties were very simple. Except for guarding and cleaning, I basically spent my free time.</p>
+                                <p>During this period of time, I also discussed with my family, because a relative happened to open a restaurant in the United States at that time, so I decided to go to the United States to work and finish my studies at the same time
+                                </p>
+                            </div>
+                        </article>
+                        <article class="timeline">
+                            <div class="timeline-content"><h2>Working in Poughkeepsie</h2>
+                                <p>This year, I was in the United States. At the beginning, I went to familiarize myself with the environment for three months. After I applied for admission locally and received the approval documents, I returned to AIT to change my student visa. However, the interviewer of AIT at that time I insisted that I didn't go there to study, but decided that I was doing illegal work there, so I couldn't apply for a study visa after half a year. Later, I had to give up and enter the workplace</p>
+                            </div>
+                            <div class="timeline-img">
+                                <img src="./img/5.png" alt="">
+                                <h2>2013-2014</h2>
+                            </div>
+                        </article>
+                        <article class="timeline">
+                            <div class="timeline-img">
+                                <img src="./img/6.png" alt="">
+                                <h2>2014-2017</h2>
+                            </div>
+                            <div class="timeline-content"><h2>The most confused moment in life</h2>
+                                <p>In the past few years, it was the most confused moment in my life. The job has been constantly changing, and I have probably done eight or nine jobs before and after.
+                                </p>
+                                <p>At this moment, I don’t know why I live? Why do I work? What does my future look like? I am addicted to a life of luxury and money every night, and I have no plans or ideas for the future.
+                                </p>
+                            </div>
+                        </article>
+                        <article class="timeline">
+                            <div class="timeline-content"><h2>Work in Bureau Veritas</h2>
+                                <p>In 2017, I was fortunate to return to BV to work. This company was the place where I stayed briefly when I was working in college.
+                                </p>
+                                <p>Fortunately, the people here don't care about my qualifications or my past. They are willing to give me a chance to work hard from the lowest level.
+                                </p>
+                                <p>Among them, what I have changed the most here is to start to learn to think about the future, and compared with the previous work, as long as you work hard here, you will have opportunities. This is something I have never experienced in the past. It is also here that I decided to pick up the book again. Go back to campus and face up to my own future.
+                                </p>
+                            </div>
+                            <div class="timeline-img">
+                                <img src="./img/7.png" alt="">
+                                <img src="./img/8.png" alt="">
+                                <h2>2017-now</h2>
+                            </div>
+                        </article>
+                        <article class="timeline">
+                            <div class="timeline-img">
+                                <img src="./img/9.png" alt="">
+                                <h2>2022-now</h2>
+                            </div>
+                            <div class="timeline-content"><h2>Studied at Tamkang University</h2>
+                                <p>I am currently studying in the Advanced Study Department of the Department of Engineering and Engineering of Tamkang University. During this semester, in addition to meeting great teachers and absorbing a lot of different knowledge, I also met many students from different places with many different stories behind them.
+                                </p>
+                                <p>This time I came back to study, in addition to wanting to get the degree I should have obtained and learn a lot of new knowledge, I hope to re-examine myself to those who looked down on me in the past.
+                                </p>
+                            </div>
                         </article>
                     </div>
             </div>
