--- a/final/Learn_66.html
+++ b/final/Learn_66.html
@@ -47,7 +47,7 @@
                         <div class="nav-form">
                             <a href="../portfolio/c.html">計算機程式語言</a>
                             <a href="../portfolio/computer.html">計算機概論</a>
-                            <a href="">開源軟體實務</a>
+                            <a href="../portfolio/linux.html">開源軟體實務</a>
                         </div>
                     </li>
                     <li>
