--- a/portfolio/linux.html
+++ b/portfolio/linux.html
@@ -107,27 +107,71 @@
     </aside>
     <!-- end of sidebar -->
 
-    <!-- computer -->
-    <section class="computer content-section" id="index">
+    <!-- linux -->
+    <section class="linux content-section" id="index">
         <header>
-            <h2>計算機概論</h2>
+            <h2>Linux</h2>
+            <h3>(移動到問題上方,可顯示答案)</h3>
         </header>
         <div class="underline"></div>
-        <div class="computer-container">
-            <div class="computer-question">
-                <h3>1.下列何者不屬於系統軟體?</h3>
-                <h3>(A)組譯器</h3>
-                <h3>(B)編譯器</h3>
-                <h3 class="answer">(C)試算表</h3>
-                <h3>(D)連結器</h3>
-            </div>
-            <div class="computer-answer">
-                <p>系統軟體主要指用來執行或控制硬體所開發的計算機軟體，如作業系統、直譯器、編譯器、資料庫管理系統、公用程式等面向開發者的軟體</p>
-            </div>
-        </div>
 
+        
+
+        <div class="linux-lr">
+            <div class="linux-container">
+                <section class="linux-title">
+                    <h3>終端機操作指令</h3>
+                </section>
+                <section class="linux-question">
+                    <h3>開啟終端機:</h3>
+                    <h3 class="answer">Ctrl+Alt+T</h3>
+                </section>
+                <section class="linux-question">
+                    <h3>中斷終端機的任何操作:</h3>
+                    <h3 class="answer">Ctrl+C</h3>
+                </section>
+                <section class="linux-question">
+                    <h3>清除終端機</h3>
+                    <h3 class="answer">Ctrl+L</h3>
+                </section>
+                <section class="linux-question">
+                    <h3>刪除光標前一個單字:</h3>
+                    <h3 class="answer">Ctrl+W</h3>
+                </section>
+                <section class="linux-question">
+                    <h3>刪除光標前所有字:</h3>
+                    <h3 class="answer">Ctrl+U</h3>
+                </section>
+            </div>
+            <div class="linux-container">
+                <section class="linux-title">
+                    <h3>教室環境</h3>
+                </section>
+                <section class="linux-question">
+                    <h3>公用帳號:</h3>
+                    <h3 class="answer">e213</h3>
+                </section>
+                <section class="linux-question">
+                    <h3>公用密碼:</h3>
+                    <h3 class="answer">qwas5678</h3>
+                </section>
+                <section class="linux-question">
+                    <h3>教室IP:</h3>
+                    <h3 class="answer">163.13.126.254</h3>
+                </section>
+                <section class="linux-question">
+                    <h3>自己的IP:</h3>
+                    <h3 class="answer">163.13.126.1xx</h3>
+                </section>
+                <section class="linux-question">
+                    <h3>老師FTP:</h3>
+                    <h3 class="answer">163.13.128.179</h3>
+                </section>
+            </div>
+            
+        </div>
     </section>
-    <!-- end of computer -->
+    <!-- end of linux -->
 
 
 
