--- a/portfolio/c.html
+++ b/portfolio/c.html
@@ -45,7 +45,7 @@
                     <div class="nav-form">
                         <a href="./c.html" class="current">計算機程式語言</a>
                         <a href="./computer.html">計算機概論</a>
-                        <a href="">開源軟體實務</a>
+                        <a href="./linux.html">開源軟體實務</a>
                     </div>
                 </li>
                 <li>
