--- a/portfolio/computer.html
+++ b/portfolio/computer.html
@@ -115,20 +115,86 @@
         <div class="underline"></div>
         <div class="computer-container">
             <div class="computer-question">
-                <h3>1.下列何者不屬於系統軟體?</h3>
-                <h3>(A)組譯器</h3>
-                <h3>(B)編譯器</h3>
-                <h3 class="answer">(C)試算表</h3>
-                <h3>(D)連結器</h3>
+                <h3>1.DVD的壓縮品質接近下列何者?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)JPEG</h3>
+                <h3>(B)JPEG2000</h3>
+                <h3 class="answer">(C)MPEG2</h3>
+                <h3>(D)MPEG4</h3>
+                <h3>(E)H.263</h3>
             </div>
             <div class="computer-answer">
-                <p>系統軟體主要指用來執行或控制硬體所開發的計算機軟體，如作業系統、直譯器、編譯器、資料庫管理系統、公用程式等面向開發者的軟體</p>
+                <p>背</p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>2.假設螢幕解析度為640X480,可顯示65536色,那麼按下鍵盤的PrintScreen鍵所擷取的全螢幕畫面佔用多少KByte?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)1000</h3>
+                <h3>(B)8000</h3>
+                <h3 class="answer">(C)600</h3>
+                <h3>(D)400</h3>
+            </div>
+            <div class="computer-answer">
+                <p>65536=2^16</p>
+                <p>16/8=2Byte (一px占用2Byte)</p>
+                <p>640*480*2/1024=600</p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>3.下列敘述何者錯誤?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)USB是 universal serial bus的縮寫</h3>
+                <h3>(B)USB最多可串接127個裝置</h3>
+                <h3>(C)USB支援隨插即用</h3>
+                <h3>(D)USB的傳輸速度比序列阜埠快</h3>
+                <h3 class="answer">(E)以上皆是</h3>
+            </div>
+            <div class="computer-answer">
+                <p>65536=2^16</p>
+                <p>16/8=2Byte (一px占用2Byte)</p>
+                <p>640*480*2/1024=600</p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>3.下列敘述何者錯誤?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)USB是 universal serial bus的縮寫</h3>
+                <h3>(B)USB最多可串接127個裝置</h3>
+                <h3>(C)USB支援隨插即用</h3>
+                <h3>(D)USB的傳輸速度比序列阜埠快</h3>
+                <h3 class="answer">(E)以上皆是</h3>
+            </div>
+            <div class="computer-answer">
+                <p>(B)USB可以串接128個裝置,只是一個被控制器佔用了</p>
+                <p>(D)PIN腳越多,速度越快</p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>4.下列哪個儲存裝置具有揮發性?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)Compact Flash</h3>
+                <h3>(B)Memory Stick</h3>
+                <h3>(C)Micro Drive</h3>
+                <h3>(D)Smart Media</h3>
+                <h3 class="answer">(E)以上皆為非揮發性</h3>
+            </div>
+            <div class="computer-answer">
+                <p>背</p>
             </div>
         </div>
 
     </section>
     <!-- end of computer -->
-
 
 
     <!-- contact -->
